--- a/assets/style.css
+++ b/assets/style.css
@@ -5,10 +5,12 @@
 }
 
 header, footer {
-    width: 100px;
+    width: 100%;
+
     height: 120px;
     background-color: blue;
     color: white;
+    
 }
 
 h1, h2 {
@@ -31,4 +33,11 @@ ul {
 p {
     text-align: center;
     font-size: 30px;
+}
+
+.card {
+  width: 80%;
+  margin: 40px auto;
+  border: 5px solid gray;
+  box-shadow: 5px 10px #888888;
 }
